fixed vertical alignments with line height

--- a/Twitch.tv API/style.css
+++ b/Twitch.tv API/style.css
@@ -1,20 +1,44 @@
+body{
+  background: #45ddff;
+}
+.title-section{
+  text-align:center;
+  margin-bottom:40px;
+}
+
 .outer{
-  max-width:1000px;
-  
+  max-width:950px;
+  background-color: #FFFFFF;
+  border-style:solid;
+  border-width:1px;
+  border-color:#B5B5B5;
 }
 .entry{
-  clear:both;
+	padding:5px 0 5px 0;
+	vertical-align:middle;
 }
 .user-logo{
-  float:left;
+       text-align:center;	
+       padding: 0 5px 0 5px;
 }
 .user{
   font-weight:bold;
+  padding:0 10px 0 10px;
   text-align:center;
 }
 .status{
   text-align:center;
+  overflow:hidden;
 }
-.logo{
-  margin: 5px 20px 5px 15px;
+@media screen and (min-width:991px){
+.user, .status { 
+	line-height:50px;
+}
+}
+@media screen and (min-width:767px) and (max-width:990px){
+
+.user, .status { 
+	line-height:25px;
+}
+
 }
